tests/ui/vtab_missing_trait.rs
use sqlite3_ext::*;

#[sqlite3_ext_vtab(StandardModule)]
struct MyVTab {}

fn main() {}
